# qt_learning

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.cc
src/ui/: CMakeLists.txt  ChannelCategory.qml  ChannelItem.qml  ChannelSidebar.qml  ChatArea.qml  IconButton.qml  MemberItem.qml  MemberSection.qml  MemberSidebar.qml  MessageBubble.qml  MobileNavButton.qml  MobileNavigation.qml  ServerIcon.qml  ServerSidebar.qml  SvgIcon.qml  VoiceChannelView.qml  VoiceParticipant.qml  icons.qrc  main.qml
